# private_transcript

./: .envrc  .gitignore  Makefile  README.md  SPRINT_PLAN.md  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  roadmap.md  shell.nix  tailwind.config.js  vitest.config.ts
.github/workflows/: ci.yml
docs/: README.md  for-attorneys.md  for-healthcare.md  for-journalists.md  for-podcasters.md  for-researchers.md  for-therapists.md  hipaa-compliant-transcription.md  local-ai-transcription.md  offline-transcription.md  vs-descript.md  vs-fireflies.md  vs-macwhisper.md  vs-otter.md  why-privacy-matters.md
public/: audio-processor.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: audio-capture-worker-aarch64-apple-darwin
src-tauri/bins/audio-capture-worker/: Package.swift
src-tauri/bins/audio-capture-worker/Sources/AudioCaptureWorker/: AudioMixer.swift  MicrophoneCapture.swift  SystemAudioCapture.swift  WAVWriter.swift  main.swift
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  chat.rs  export.rs  folder.rs  generation.rs  mod.rs  models.rs  session.rs  settings.rs  streaming_transcription.rs  system_audio.rs  template.rs  transcription.rs  workspace.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/db/migrations/: m001_initial_schema.sql  m002_transcript_chunks.sql  m003_chat_history.sql  mod.rs
src-tauri/src/models/: folder.rs  mod.rs  session.rs  settings.rs  template.rs  workspace.rs
src-tauri/src/services/: audio.rs  chunking.rs  database.rs  embeddings.rs  export.rs  llama_backend.rs  llm.rs  local_llm.rs  mod.rs  model_manager.rs  rag.rs  streaming_transcription.rs  system_audio.rs  whisper.rs
src-tauri/src/templates/: general.rs  legal.rs  mod.rs  research.rs  therapy.rs
src-tauri/src/utils/: error.rs  mod.rs  paths.rs
src-tauri/tests/: chat_integration_test.rs  database_integration_test.rs  database_operations_test.rs  embeddings_integration_test.rs  export_integration_test.rs  live_transcription_integration_test.rs  llm_integration_test.rs  model_manager_test.rs  model_settings_integration_test.rs  models_test.rs  rag_integration_test.rs  streaming_transcription_test.rs  system_audio_integration_test.rs  transcription_pipeline_test.rs  whisper_test.rs  whisperkit_test.rs
src/components/chat/: ChatPanel.test.tsx  ChatPanel.tsx
src/components/layout/: MainContent.test.tsx  MainContent.tsx  Sidebar.test.tsx  Sidebar.tsx  index.ts
src/components/onboarding/: OnboardingView.test.tsx  OnboardingView.tsx  index.ts
src/components/recording/: LiveTranscriptionDisplay.test.tsx  LiveTranscriptionDisplay.tsx  RecordingView.test.tsx  RecordingView.tsx  index.ts
src/components/search/: GlobalSearch.test.tsx  GlobalSearch.tsx
src/components/session/: SessionDetail.test.tsx  index.ts  (+1 more)
src/hooks/: useTheme.ts
src/lib/: logger.ts  speakerDetection.integration.test.ts  speakerDetection.test.ts  speakerDetection.ts  tauri.ts  utils.test.ts  utils.ts
src/stores/: appStore.test.ts  appStore.ts  index.ts  useChatStore.ts  useInitStore.ts  useSessionStore.ts  useTemplateStore.ts  useUIStore.ts  useWorkspaceStore.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: index.ts
whisperkit-worker/: Package.swift
whisperkit-worker/Sources/: IPCProtocol.swift  StreamingTranscriber.swift  main.swift
(+32 files in other folders)
