[package]
name = "private-transcript"
version = "1.0.0"
description = "Privacy-first offline transcription and note generation"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Whisper transcription
# whisper-rs = "0.11"  # Uncomment when ready to add

# HTTP client (for Ollama API)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Audio processing
# symphonia = { version = "0.5", features = ["all"] }  # Uncomment when ready

# Export
# printpdf = "0.6"  # Uncomment when ready
# docx-rs = "0.4"   # Uncomment when ready

# Encryption
# aes-gcm = "0.10"  # Uncomment when ready
# argon2 = "0.5"    # Uncomment when ready

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
